--- a/src/views/Banking.css
+++ b/src/views/Banking.css
@@ -3,6 +3,6 @@
     min-height: calc(100vh - 80px - 80px);
     background-color: #d5f4f4;
     display: grid;
-    grid-template-columns: repeat(3,1fr);
+    /*grid-template-columns: repeat(1,3fr);*/
     
 }
