--- a/src/views/Main.css
+++ b/src/views/Main.css
@@ -4,7 +4,7 @@
     background-color: #d5f4f4;
     display: flex;
     justify-content: center;
-    
+   /* background-image: url('/components/01.jpeg');*/
 }
 .Main h1{
     display: flex;
