--- a/src/views/Banking.css
+++ b/src/views/Banking.css
@@ -2,7 +2,11 @@
     width: 100%;
     min-height: calc(100vh - 80px - 80px);
     background-color: #d5f4f4;
-    display: grid;
-    /*grid-template-columns: repeat(1,3fr);*/
-    
+    padding: 60px;
+   /* justify-content: center;
+    background-image: url('/components/01.jpeg'); display: flex;*/
+}
+.Banking h1{
+  
+     margin: auto;
 }
