--- a/src/views/Main.css
+++ b/src/views/Main.css
@@ -2,11 +2,11 @@
     width: 100%;
     min-height: calc(100vh - 80px - 80px);
     background-color: #d5f4f4;
-    display: flex;
-    justify-content: center;
-   /* background-image: url('/components/01.jpeg');*/
+    padding: 60px;
+   /* justify-content: center;
+    background-image: url('/components/01.jpeg'); display: flex;*/
 }
 .Main h1{
-    display: flex;
-   
+  
+     margin: auto;
 }
